package models;

public enum Mutuelle{
    CNSS,
    CIMR,
    CNAM,
    CNOPS,
}
