package models;

public enum Specialite {
    ENDODONTIE,
    CHIRURGIE_DENTAIRE,
    PROTHESE,
    ORTHODONTE,
    PARODONTOLOGIE
}
