package models.antecedantClasses;

public enum Risque{
    LOW,
    AVERAGE,
    HIGH,
    UNKNOWN
}
