package models.consultation;

public enum TypeConsultation {
    GENERAL_CONSULTATION,
    FOLLOW_UP,
    EMERGENCY
}
