package models.finance;

public enum StatutPaiement {
    WAITING,
    UNPAID,
    PAID;

}
