package models.finance;

public enum TypePaiement {
    CHECK,
    TRANSFER,
    CREDIT_CARD,
    CASH,
    OTHER
}
